// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Link As a <button> 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  color: #216beb;
  font-size: 16px;
  background: none;
  border: none;
  padding: 0;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:hover {
  cursor: pointer;
  color: #1254c7;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <button
      className="c1"
      color="blue"
      fontSize="medium"
    >
      Link
    </button>
  </div>
</div>
`;

exports[`Storyshots Link Link  1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  color: #216beb;
  font-size: 16px;
  background: none;
  border: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:hover {
  cursor: pointer;
  color: #1254c7;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <a
      className="c1"
      color="blue"
      fontSize="medium"
      href="http://nulogy.design"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`Storyshots Link With a different color 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  color: #011e38;
  font-size: 16px;
  background: none;
  border: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:hover {
  cursor: pointer;
  color: #cc1439;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <a
      className="c1"
      color="black"
      fontSize="medium"
      href="http://nulogy.design"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`Storyshots Link With a different size 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  color: #011e38;
  font-size: 20px;
  background: none;
  border: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:hover {
  cursor: pointer;
  color: #000306;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <a
      className="c1"
      color="black"
      fontSize="large"
      href="http://nulogy.design"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`Storyshots Link Without underline 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  color: #216beb;
  font-size: 16px;
  background: none;
  border: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c1:hover {
  cursor: pointer;
  color: #1254c7;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <a
      className="c1"
      color="blue"
      fontSize="medium"
      href="http://nulogy.design"
    >
      Link
    </a>
  </div>
</div>
`;

exports[`Storyshots Link with custom font size 1`] = `
.c0 {
  color: #011e38;
  font-family: 'IBM Plex Sans',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

.c0 button {
  font-family: 'IBM Plex Sans',sans-serif;
}

.c0 * {
  box-sizing: border-box;
}

.c0 img {
  max-width: 100%;
  height: auto;
}

.c1 {
  color: #216beb;
  font-size: 14px;
  background: none;
  border: none;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c1:hover {
  cursor: pointer;
  color: #1254c7;
}

<div
  style={
    Object {
      "padding": "24px",
    }
  }
>
  <div
    className="c0"
  >
    <a
      className="c1"
      color="blue"
      fontSize="small"
      href="http://nulogy.design"
    >
      Link
    </a>
  </div>
</div>
`;
